# Kings

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/enet/: enet.h
src/: main.cpp  pch.h
src/Core/: Application.cpp  Application.h  Layer.cpp  Layer.h  Random.cpp  Random.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Serializator.h  TextureManager.cpp  TextureManager.h
src/Entities/: Entity.h  Player.cpp  Player.h  Self.cpp  Self.h
src/Entities/Buildings/: Building.cpp  Building.h  Home.cpp  Home.h  Mine.cpp  Mine.h
src/Network/: Client.cpp  Client.h  Networker.cpp  Networker.h  Packet.h  Server.cpp  Server.h
src/Networking/: Client.cpp  Client.h  Networker.h  Server.cpp  Server.h
src/Networking/Data/: BuildingData.h  Connections.h  PacketUtils.h  PlayerData.h  ServerData.h  Types.h
src/UI/: Button.cpp  Button.h  FontManager.h  Options.cpp  Options.h  PlayerStats.cpp  PlayerStats.h  ServerAdder.cpp  ServerAdder.h  ServerList.cpp  ServerList.h  ShopBar.cpp  ShopBar.h  TextInput.cpp  TextInput.h
